# child_voice_conversationvoice_conversation

./: .env.example  .gitignore  README.md  README_CN.md  basic_voice_chat.py  build_executable.py  chatgpt_style.py  chatgpt_style_gui.py  create_icon.py  debug_gui.py  debug_modern_gui.py  direct_play.py  gui_main.py  kids_voice_assistant.py  main.py  main_fixed.py  main_new.py  mini_gui.py  modern_gui.py  pyproject.toml  requirements.txt  run_assistant.bat  run_gui_assistant.bat  run_modern_gui.bat  simple_assistant.py  simple_gui.py  simplified_voice_chat.py  voice_chat_gui.py  启动语音助手.bat  语音助手.spec
logs/: error_log_20250508_000107.txt
voice_assistant/: __init__.py  ai_service.py  ai_service_simple.py  audio_converter.py  audio_player.py  real_speech_to_text.py  simple_windows_speech.py  speech_handler.py  speech_recognition.py  speech_to_text.py  text_to_speech.py  text_to_speech_simple.py  windows_speech.py
