[tool.poetry]
name = "voice-conversation"
version = "0.1.0"
description = "A simplified voice conversation assistant with text and voice modes"
authors = ["Voice Assistant User <user@example.com>"]
readme = "README.md"
packages = [{include = "voice_assistant"}]


[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.0"
openai = "^1.3.0"
requests = "^2.31.0"
PyAudio = "^0.2.13"
SpeechRecognition = "^3.14.2"
pyttsx3 = "^2.90"
standard-aifc = "^3.13.0"
audioop-lts = "^0.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
voice-assistant = "main:main"
